Calcul des dommages selon les dés du jet d'attaque
- Dommage selon l'arme
- Bonus de l'héroïsme
- Prise en compte de la prime Attaque meurtrière
- Triple 1 pour succès
- Triple 6 pour échec

--- a/lang/en.json
+++ b/lang/en.json
@@ -269,7 +269,8 @@
             "custommodifier": "Custom modifier used : ({rollModifier}).",
             "heroismmodifier": "One Heroism point used : +1d6",
             "rollformula": "Final dice rolled:",
-            "rollresult": "Result of the dice roll: "
+            "rollresult": "Result of the dice roll: ",
+            "damageresult": "Damages are: "
         },
         "bonus":{
             "lethalattack":{
