--- a/lang/fr.json
+++ b/lang/fr.json
@@ -21,6 +21,7 @@
             "flaw": "Défaut",
             "goal": "Idéal",
             "health": "Vitalité",
+            "supportNumber": "Effectifs",
             "heroism": "Héroisme",
             "name": "Nom",
             "origin": "Origine",
