--- a/lang/fr.json
+++ b/lang/fr.json
@@ -228,7 +228,7 @@
                 "description": ""
             },
             "dexterity": {
-                "name": "Habilité",
+                "name": "Habileté",
                 "description": ""
             },
             "social": {
